--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -489,6 +489,7 @@ section {
   position: relative;
   overflow: hidden;
   z-index: 1;
+  box-shadow: #888888 0 4px 12px;
 }
 .portfolio .portfolio-wrap::before {
   content: "";
