--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,124 +2,59 @@
   #dda8a6 #f9f6c9 #2c4f71 */
 
 html, body {
-  font-family: Poppins, sans-serif;
+  font-family: Inter, Arial, sans-serif;
   margin: 0;
   height: 100%;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+html {
+  background: url("/assets/img/background-small.jpeg") no-repeat;
+  background-size: cover;
 }
 
 body {
   display: flex;
   flex-flow: column;
   height: 100%;
+  padding: 16px;
+  background: url("/assets/img/background-smaller.jpeg") no-repeat;
+  background-size: cover;
 }
 
 h1 {
-  color: white;
-  font-size: 42pt;
-  font-weight: 600;
-  text-align: end;
-  line-height: 1;
-  margin-bottom: 12px;
+  font-size: 36pt;
+  margin-top: 12px;
+  margin-bottom: 6px;
+  font-weight: 700;
 }
 
-header p {
+h2 {
+  font-size: 18pt;
   margin: 0;
-  color: #f9f6c9;
-}
-
-header, main, footer {
-  padding: 24px;
-}
-
-header {
-  flex: 1 1 auto;
-
-  background: #dda8a6;
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  justify-content: center;
-}
-
-header .wrapper {
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: flex-end;
-  justify-content: center;
+  font-weight: 600;
+  color: rgba(0, 0, 0, 0.5);
 }
 
 main {
-  flex: 2 1 auto;
-
-  background: #f9f6c9;
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-  justify-content: center;
+  padding-top: 36px;
 }
 
-main p {
-  color: #2c4f71;
-  margin-top: 48px;
+a {
+  font-size: 14pt;
+  font-weight: 700;
+  padding-top: 14px;
+  display: block;
 }
 
-main .items {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  justify-content: center;
-}
-
-main .items .item {
-  -webkit-tap-highlight-color: transparent;
-  background: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 80px;
-  width: 80px;
-  transition: filter 0.3s, box-shadow 0.3s;
-  border-radius: 16px;
-  margin: 14px;
-  box-shadow: -2px 2px 6px rgba(0,0,0,0.3);
-  overflow: hidden;
+a:hover {
   cursor: pointer;
-  filter: grayscale(0.9) contrast(0.7) brightness(1.35);
-}
-
-@media screen and (max-width: 600px) {
-  main .items .item {
-    filter: grayscale(0.2) contrast(0.8) brightness(1.2);
-  }
-}
-
-main .item:hover {
-  filter: none;
-  box-shadow: -2px 2px 10px rgba(0,0,0,0.3);
-}
-
-main .item img {
-  max-height: 105%;
-  max-width: 105%;
-  border-radius: 16px;
-}
-
-main .description {
-  opacity: 0;
+  text-decoration: underline;
+  color: black;
 }
 
 footer {
-  flex: 1 1 auto;
-
-  background: #2c4f71;
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  font-size: 10pt;
-}
-
-footer img {
-  height: 120px;
+  position: absolute;
+  bottom: 6px;
+  font-weight: 600;
 }
